// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refractor elements MessagesElement should refract to semantic ApiDOM tree 1`] = `
(MessagesElement
  (MemberElement
    (StringElement)
    (MessageElement))
  (MemberElement
    (StringElement)
    (MessageElement)))
`;

exports[`refractor elements given field is of type ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(MessagesElement
  (MemberElement
    (StringElement)
    (MessageElement))
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement)))))
`;
